Kubernetes/k8s-teste/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver    
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "wesleywillians/hello-go:v9.6"

          #define quanto de recurso sera consumido 
          resources:
            requests:
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 30
            
          
          #com readinessProbe o k8s manda o trafego apenas quando a aplica;áo estiver pronta
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10


          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5 
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            #initialDelaySeconds: 15

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
              readOnly: true
            - mountPath: "/go/pvc"
              name: goserver-volume
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc

        - name: config
          configMap:
            name: configmap-family
            items:
            - key: members
              path: "family.txt"
