Kubernetes/k8s-teste/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: ingress-host
spec:
  rules:
  - host: "pedro.hedro.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
tls:
  - hosts:
    - "ingress.fullcycle.com.br"
    secretName: letsencrypt-tls
